--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gsap": "^3.12.2",
     "n-krypta": "^1.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
